test: Refactor Category, Dish, Order, and Restaurant controller tests for improved clarity and structure; update annotations and assertions