@@ -4,18 +4,17 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.plazoleta.plazoleta_microservice.application.dto.request.CategoryRequestDto;
 import com.plazoleta.plazoleta_microservice.application.dto.response.CategoryResponseDto;
 import com.plazoleta.plazoleta_microservice.application.handler.ICategoryHandler;
+import com.plazoleta.plazoleta_microservice.infrastructure.configuration.security.adapter.JwtTokenAdapter;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
-import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -25,10 +24,8 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 
-@SpringBootTest
-@AutoConfigureMockMvc
-@TestPropertySource(locations = "classpath:application-test.properties")
-@Transactional
+@WebMvcTest(CategoryController.class)
+@AutoConfigureMockMvc(addFilters = false)
 class CategoryControllerTest {
 
     @Autowired
@@ -37,83 +34,58 @@ class CategoryControllerTest {
     @MockitoBean
     private ICategoryHandler categoryHandler;
 
+    @MockitoBean
+    private JwtTokenAdapter jwtTokenAdapter;
+
     @Autowired
     private ObjectMapper objectMapper;
 
-    @Test
-    @WithMockUser(roles = {"ADMIN"})
-    void createCategory_ShouldReturnCreatedCategory() throws Exception {
-        CategoryRequestDto requestDto = new CategoryRequestDto();
-        requestDto.setName("Electronics");
-        requestDto.setDescription("Electronic devices and gadgets");
+    private CategoryRequestDto categoryRequestDto;
+    private CategoryResponseDto categoryResponseDto;
 
-        CategoryResponseDto responseDto = new CategoryResponseDto();
-        responseDto.setId(1L);
-        responseDto.setName("Electronics");
-        responseDto.setDescription("Electronic devices and gadgets");
+    @BeforeEach
+    void setUp() {
+        categoryRequestDto = new CategoryRequestDto();
+        categoryRequestDto.setName("Entradas");
+        categoryRequestDto.setDescription("Description");
 
-        when(categoryHandler.createCategory(any(CategoryRequestDto.class)))
-                .thenReturn(responseDto);
-
-        mockMvc.perform(post("/categories")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(requestDto)))
-                .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.id").value(1L))
-                .andExpect(jsonPath("$.name").value("Electronics"))
-                .andExpect(jsonPath("$.description").value("Electronic devices and gadgets"));
-
-        verify(categoryHandler, times(1)).createCategory(any(CategoryRequestDto.class));
+        categoryResponseDto = new CategoryResponseDto();
+        categoryResponseDto.setId(1L);
+        categoryResponseDto.setName("Entradas");
     }
 
     @Test
     @WithMockUser(roles = {"ADMIN"})
-    void getAllCategories_ShouldReturnListOfCategories() throws Exception {
-        CategoryResponseDto category1 = new CategoryResponseDto();
-        category1.setId(1L);
-        category1.setName("Electronics");
-        category1.setDescription("Electronic devices");
+    void createCategory_shouldReturnCreated() throws Exception {
+        when(categoryHandler.createCategory(any(CategoryRequestDto.class)))
+                .thenReturn(categoryResponseDto);
 
-        CategoryResponseDto category2 = new CategoryResponseDto();
-        category2.setId(2L);
-        category2.setName("Books");
-        category2.setDescription("Books and literature");
+        mockMvc.perform(post("/categories")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(categoryRequestDto)))
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.id").value(categoryResponseDto.getId()))
+                .andExpect(jsonPath("$.name").value(categoryResponseDto.getName()));
+    }
 
-        List<CategoryResponseDto> categories = Arrays.asList(category1, category2);
-
-        when(categoryHandler.getAllCategories()).thenReturn(categories);
+    @Test
+    @WithMockUser(roles = {"OWNER"})
+    void getAllCategories_shouldReturnList() throws Exception {
+        when(categoryHandler.getAllCategories())
+                .thenReturn(List.of(categoryResponseDto));
 
         mockMvc.perform(get("/categories"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()").value(2))
-                .andExpect(jsonPath("$[0].id").value(1L))
-                .andExpect(jsonPath("$[0].name").value("Electronics"))
-                .andExpect(jsonPath("$[1].id").value(2L))
-                .andExpect(jsonPath("$[1].name").value("Books"));
-
-        verify(categoryHandler, times(1)).getAllCategories();
+                .andExpect(jsonPath("$[0].id").value(categoryResponseDto.getId()))
+                .andExpect(jsonPath("$[0].name").value(categoryResponseDto.getName()));
     }
 
     @Test
     @WithMockUser(roles = {"ADMIN"})
-    void deleteCategoryById_ShouldReturnNoContent() throws Exception {
-        Long categoryId = 1L;
-        doNothing().when(categoryHandler).deleteCategoryById(categoryId);
+    void deleteCategoryById_shouldReturnNoContent() throws Exception {
+        doNothing().when(categoryHandler).deleteCategoryById(1L);
 
-        mockMvc.perform(delete("/categories/{categoryId}", categoryId))
+        mockMvc.perform(delete("/categories/{categoryId}", 1L))
                 .andExpect(status().isNoContent());
-
-        verify(categoryHandler, times(1)).deleteCategoryById(categoryId);
-    }
-
-    @Test
-    @WithMockUser(roles = {"ADMIN"})
-    void createCategory_WithInvalidData_ShouldReturnBadRequest() throws Exception {
-        CategoryRequestDto invalidRequest = new CategoryRequestDto();
-
-        mockMvc.perform(post("/categories")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(invalidRequest)))
-                .andExpect(status().isBadRequest());
     }
 }
